# blog-post-app

./: .gitignore  README.md  main.py  pyproject.toml
data/: data_blog_posts.json  holiday_journal.json
static/css/: styles.css
templates/: about.html  data_blogs.html  footer.html  header.html  index.html  journals.html
