[tool.poetry]
name = "day-071-blog-for-deploy"
version = "0.1.0"
description = ""
authors = ["Elphie1185 <delphine_rabiller@yahoo.fr>"]
readme = "README.md"
packages = [{include = "day_071_blog_for_deploy"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.38"
werkzeug = "^3.1.3"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
flask-gravatar = "^0.5.0"
flask-ckeditor = "^1.0.0"
flask-bootstrap = "^3.3.7.1"
flask = "2.3.0"
bootstrap-flask = "^2.4.1"
bleach = "^6.2.0"
flask-wtf = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
